# latte-deck

./: .gitignore  PROJECT_STRUCTURE.md  README.md  battery_monitor.py  composite_hid.cpp  composite_hid.h  config.h  gamepad.cpp  gamepad.h  gamepad_assignment.h  gamepad_pinout.h  gamepad_utils.cpp  gamepad_utils.h  hid_config.h  hid_descriptor.h  hid_leonardo.cpp  hid_leonardo.h  hid_power_device.cpp  hid_power_device.h  latte-deck.ino  todo.md  ups.cpp  ups.h  upsDef.h  ups_control.cpp  ups_control.h  ups_ctrl.cpp  ups_ctrl.h  ups_hid.cpp  ups_hid.h  ups_hid_core.cpp  ups_hid_core.h  ups_power_device.cpp  ups_power_device.h  ups_simple.cpp  ups_simple.h  ups_utils.cpp  ups_utils.h  usb_config.h  usb_descriptor.h
battery-service/: BATTERY_MONITORING.md  Makefile  README.md  UBUNTU_DEPLOYMENT.md  battery_service.cpp  battery_system_integration.py  install_ubuntu.sh  latte-deck-battery.service  test_ubuntu_service.sh
battery-service/battery_service_rust/: Cargo.toml
battery-service/battery_service_rust/src/: main.rs  ubuntu.rs
docs/: architecture.md  arduino_library_modifications.md  codebase_improvements.md  composite_hid_solution.md  configuration.md  dfrobot_nicohood_integration.md  gamepad_assignments.md  hid_implementation_guide.md  hid_power_device_implementation.md  hid_power_device_summary.md  hid_testing_guide.md  leonardo_usb_limitations.md  modular_architecture.md  nicohood_integration.md  project_structure_recommendations.md  troubleshooting.md  ups_architecture.md  ups_cleanup_summary.md  ups_hid_reporting_fix.md  ups_implementation.md  user_guide.md  (+6 more)
(+3 files in other folders)
