[package]
name = "latte-deck-battery-service"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "LatteDeck Battery Service - Background service for battery monitoring"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-serial = "5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
zbus = "3.0"  # For D-Bus integration on Ubuntu
sysinfo = "0.29"  # For system information
nix = "0.27"  # For Unix system calls
libc = "0.2"  # For C library bindings

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = [
    "Win32_System_Power",
    "Win32_Foundation",
    "Win32_System_Registry",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
